Support for lombok @Builder annotation with ObjectMapper for deserializing objects in execution flow